# watermark

./: .gitignore  ChangeLog  Makefile  Makefile.am  configure.ac  main.c  wm.c
man/: watermark.man
package/debian/: changelog  control  copyright
package/rpm/: watermark.spec
src/: Makefile  Makefile.am  debug.c  debug.h  main.c
